[Admin] Fix dark mode

--- a/system/admin-panel/src/pages/dashboard/Dashboard.module.scss
+++ b/system/admin-panel/src/pages/dashboard/Dashboard.module.scss
@@ -20,16 +20,6 @@
     height: 100%;
 }
 
-:global(.modeDark) {
-    .topStatContent {
-        background-color: #333;
-
-        * {
-            color: #eee;
-        }
-    }
-}
-
 .topStatIcon {
     background-position: center;
     background-size: contain;
@@ -72,16 +62,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-:global(.modeDark) {
-    .chartBox {
-        background-color: #333;
-
-        * {
-            color: #eee;
-        }
-    }
 }
 
 .chart {
@@ -134,4 +114,34 @@
 .specsList {
     @extend .pageViewList;
     padding: 0 10px;
+}
+
+:global(.modeDark) {
+    .topStatContent {
+        background-color: #333;
+
+        * {
+            color: #eee;
+        }
+
+        .rating,
+        .rating * {
+            color: #fdcf63;
+
+            :global(.MuiRating-iconEmpty) {
+                color: #666;
+                * {
+                    color: #666;
+                }
+            }
+        }
+    }
+
+    .chartBox {
+        background-color: #333;
+
+        * {
+            color: #eee;
+        }
+    }
 }
