--- a/system/admin-panel/src/pages/product/Product.module.scss
+++ b/system/admin-panel/src/pages/product/Product.module.scss
@@ -211,4 +211,8 @@ button.galleryAddImageBtn {
             color: #eee;
         }
     }
+
+    .imageItem:hover {
+        background-color: #555;
+    }
 }
